--- a/lab10/styles.css
+++ b/lab10/styles.css
@@ -7,7 +7,7 @@ padding: 10px;
 margin-bottom: 30px;}
 nav a{color: #4f4f4f;}
 nav a:hover{background-color: #ff8861;}
-span{float: right;}
+footer span{float: right;}
 .row1 {display: flex; flex-wrap: wrap;}
 .row1col1 {padding: 20px; flex: 1;}
 .row1col2 {padding: 20px; flex: 1;}
@@ -17,5 +17,6 @@ span{float: right;}
 .article1, .article2, .article3, .article4 {margin: 10px; padding: 15px; border-radius: 1em; background-color: #b57676;}
 .image {float: right; margin: 10px; max-width: 100%;}
 @media only screen and (max-width: 600px) {
-    nav a{max-width: 100%; display: block;}
+    nav a{max-width: 100%; display: block; margin-top: 10px;}
+    nav span{display: none;}
 }
