--- a/lab11/styles.css
+++ b/lab11/styles.css
@@ -2,7 +2,7 @@ body{background-color: #ff8861;
     color: #000000;}
 a:link{color: #4f4f4f;}
 h1{color: #000000;}
-nav{background-color: #b57676;
+nav{background-color: #ffffff;
 padding: 10px;
 margin-bottom: 30px;}
 nav a{color: #000000;}
